--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,21 @@
   "name": "cti-dashboard-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
+    "recharts": "^2.8.0",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "@tailwindcss/forms": "^0.5.4"
+    "tailwindcss": "^3.3.0"
   }
 }
