--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,16 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
-pymongo==4.6.0
+Flask-SocketIO==5.3.0
 python-dotenv==1.0.0
 requests==2.31.0
 gunicorn==21.2.0
+scikit-learn==1.3.0
+numpy==1.24.0
+pandas==2.0.0
+matplotlib==3.7.0
+seaborn==0.12.0
+textblob==0.17.1
+geoip2==4.7.0
+python-whois==0.8.0
 dnspython==2.4.2
+schedule==1.2.0
