--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "react-spring": "^9.7.1",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
@@ -44,6 +44,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0"
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
