--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
-    "socket.io-client": "^4.7.2",
-    "web-vitals": "^2.1.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^0.0.0",
+    "socket.io-client": "^4.7.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,10 +21,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.0",
-    "@tailwindcss/forms": "^0.5.4"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0"
   },
   "browserslist": {
     "production": [
