--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.4.0",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
