--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "cti-dashboard-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:8000",
+  "name": "safechat-sentinel",
+  "version": "2.0.0",
+  "description": "Enterprise-Grade Threat Intelligence for WhatsApp Scam Defense",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "react-scripts build",
+    "test": "jest"
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.4.0",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
+    "jest": "^29.7.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -20,28 +31,9 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "proxy": "http://localhost:3000"
 }
